fix: add overflow-wrap: anywhere for wrapping of text

--- a/src/components/MainSidebar/DimensionItem/DimensionItemBase.module.css
+++ b/src/components/MainSidebar/DimensionItem/DimensionItemBase.module.css
@@ -56,6 +56,7 @@
 .label .primary {
     font-size: 14px;
     line-height: 17px;
+    overflow-wrap: anywhere;
 }
 
 .iconAndLabelWrapper {
